--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "description": "Boilerplate with typescript, jest, eslint & prettier to write katas",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node src/index.ts"
+    "start": "ts-node src/index.ts",
+    "test": "jest",
+    "test:watch": "jest --watchAll"
   },
   "keywords": [],
   "author": "Rubén Bernárdez",
   "license": "MIT",
   "dependencies": {
+    "@types/jest": "^26.0.0",
+    "jest": "^26.0.1",
+    "ts-jest": "^26.1.0",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.5"
   }
