--- a/package.json
+++ b/package.json
@@ -14,16 +14,16 @@
   "author": "Rubén Bernárdez",
   "license": "MIT",
   "dependencies": {
-    "@types/jest": "^26.0.0",
-    "jest": "^26.0.1",
-    "ts-jest": "^26.1.0",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.5"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.0",
     "husky": "^4.2.5",
+    "jest": "^26.0.1",
     "lint-staged": "^10.2.10",
-    "prettier": "2.0.5"
+    "prettier": "2.0.5",
+    "ts-jest": "^26.1.0"
   },
   "husky": {
     "hooks": {
