--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node src/index.ts",
+    "pretest": "npm run lint",
     "test": "jest",
-    "posttest": "npm run format",
     "test:watch": "jest --watchAll",
-    "format": "prettier --loglevel warn --write \"**/*.{ts,tsx,js}\""
+    "format": "prettier --loglevel warn --write \"**/*.{ts,tsx,js}\"",
+    "lint": "eslint '*/**/*.{js,ts,tsx}' --cache --fix"
   },
   "keywords": [],
   "author": "Rubén Bernárdez",
@@ -19,6 +20,11 @@
   },
   "devDependencies": {
     "@types/jest": "^26.0.0",
+    "@typescript-eslint/eslint-plugin": "^3.2.0",
+    "@typescript-eslint/parser": "^3.2.0",
+    "eslint": "^7.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-jest": "^23.13.2",
     "husky": "^4.2.5",
     "jest": "^26.0.1",
     "lint-staged": "^10.2.10",
@@ -27,10 +33,15 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "lint-staged",
+      "pre-push": "npm run test"
     }
   },
   "lint-staged": {
-    "*.{ts,tsx,js}": "prettier --write"
+    "*.{ts,tsx,js}": [
+      "prettier --write",
+      "eslint . --cache --fix",
+      "git add"
+    ]
   }
 }
